libtracker-data: Handle SQLITE_DONE in tracker_triples filter()

The filter() function is meant to return SQLITE_OK or an error condition.
The way to notify that a cursor is finished is returning TRUE on the next
call to eof(), so just do that.

Returning SQLITE_DONE here rather seems to stop query execution altogether
(without apparent errors) than finishing this cursor, which will definitely
bring side effects if the virtual table is being evaluated multiple times.

Closes: https://gitlab.gnome.org/GNOME/tracker-miners/issues/55